Add compiled CSS for GitHub Pages deployment

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules/
 
 # Build output
-assets/css/output.css
+# assets/css/output.css (commented out for GitHub Pages deployment)
 
 # Editor
 .vscode/
